--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -327,11 +327,13 @@
 @media screen and (max-width: 480px) {
   @mixin title {
     h4 {
-      font-size: 0.8rem;
+      font-size: 0.6rem;
+      // font-size: 0.8rem;
     }
 
     h1 {
-      font-size: 1.6rem;
+      font-size: 1.4rem;
+      // font-size: 1.6rem;
       margin: 0 0 2rem;
     }
   }
@@ -347,6 +349,11 @@
       .sentence {
         .titleBox {
           @include title;
+        }
+
+        p {
+          font-size: 0.8rem;
+          // font-size: 15px;
         }
       }
     }
@@ -387,7 +394,8 @@
             border-bottom: 1px solid black;
 
             // border: none;
-            font-size: 14px;
+            font-size: 0.8rem;
+            // font-size: 14px;
             padding: 0 0 0.5rem;
 
             .title {
@@ -405,11 +413,13 @@
 @media screen and (max-width: 390px) {
   @mixin title {
     h4 {
-      font-size: 0.8rem;
+      font-size: 0.6rem;
+      // font-size: 0.8rem;
     }
 
     h1 {
-      font-size: 1.6rem;
+      font-size: 1.4rem;
+      // font-size: 1.6rem;
       margin: 0 0 1.5rem;
     }
   }
@@ -468,8 +478,7 @@
           padding: 1.5rem 0;
 
           .address {
-            border: none;
-            font-size: 14px;
+            border-bottom: 1px solid black;
             padding: 0 0 0.5rem;
 
             .title {
