--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -4,7 +4,7 @@
 }
 .body .headerSection {
   width: 100%;
-  height: 400px;
+  height: 350px;
   background-image: url("/image/mainHeader.jpg");
   background-size: cover;
   background-position: center;
@@ -38,8 +38,8 @@
   margin: 0 0 3rem;
 }
 .body .sentenceSection .sentence p {
-  width: 80%;
   font-size: 18px;
+  width: 80%;
   margin: 0;
   line-height: 1.8;
 }
@@ -77,7 +77,6 @@
   opacity: 0.7;
 }
 .body .accessSection {
-  background-color: white;
   padding: 5rem;
   width: 100%;
   display: flex;
@@ -155,6 +154,9 @@
 }
 
 @media screen and (max-width: 1024px) {
+  .body .headerSection {
+    height: 300px;
+  }
   .body .sentenceSection {
     padding: 3rem;
   }
@@ -167,21 +169,40 @@
   .body .linkSection {
     padding: 3rem;
   }
+  .body .accessSection {
+    padding: 3rem;
+  }
+  .body .accessSection .titleBox {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    width: 100%;
+  }
+  .body .accessSection .titleBox h4 {
+    margin: 0;
+  }
+  .body .accessSection .titleBox h1 {
+    font-size: 2rem;
+    margin: 0 0 3rem;
+  }
   .body .accessSection .accessBox {
     flex-direction: column;
+    width: 100%;
   }
   .body .accessSection .accessBox .mapBox {
-    width: 100%;
+    width: 70%;
   }
   .body .accessSection .accessBox .mapBox .mapSize {
     height: 300px;
   }
   .body .accessSection .accessBox .addressBox {
     width: 100%;
+    padding: 2rem 0;
   }
   .body .accessSection .accessBox .addressBox .address {
-    width: 80%;
-    padding: 0 1.5rem 0.5rem;
+    font-size: 16px;
+    width: 70%;
   }
 }
 @media screen and (max-width: 768px) {
@@ -189,10 +210,6 @@
     height: 300px;
   }
   .body .sentenceSection .sentence .titleBox {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
     width: 100%;
   }
   .body .sentenceSection .sentence .titleBox h4 {
@@ -222,14 +239,19 @@
     height: 180px;
   }
   .body .accessSection {
-    background-color: white;
     padding: 3rem;
   }
   .body .accessSection .titleBox {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
+    width: 100%;
+  }
+  .body .accessSection .titleBox h4 {
+    font-size: 0.8rem;
+  }
+  .body .accessSection .titleBox h1 {
+    font-size: 1.6rem;
+    margin: 0 0 2rem;
+  }
+  .body .accessSection .titleBox {
     width: 100%;
   }
   .body .accessSection .titleBox h4 {
@@ -243,27 +265,23 @@
     width: 100%;
   }
   .body .accessSection .accessBox .mapBox {
-    width: 100%;
+    width: 85%;
   }
   .body .accessSection .accessBox .mapBox .mapSize {
     height: 230px;
   }
   .body .accessSection .accessBox .addressBox {
     width: 100%;
+    padding: 2rem 0;
   }
   .body .accessSection .accessBox .addressBox .address {
     font-size: 15px;
-    width: 100%;
-    padding: 0 1.5rem 0.5rem;
-    margin-bottom: 1rem;
+    width: 85%;
   }
 }
 @media screen and (max-width: 480px) {
   .body .headerSection {
     height: 250px;
-  }
-  .body .sentenceSection {
-    background-color: white;
   }
   .body .sentenceSection .sentence .titleBox h4 {
     font-size: 0.6rem;
@@ -284,9 +302,6 @@
   .body .linkSection .linkBox .linkItem:nth-child(2) {
     margin: 1.5rem 0;
   }
-  .body .accessSection {
-    background-color: white;
-  }
   .body .accessSection .titleBox {
     border: none;
   }
@@ -302,13 +317,14 @@
     width: 100%;
   }
   .body .accessSection .accessBox .mapBox {
+    width: 100%;
     border: none;
   }
   .body .accessSection .accessBox .addressBox {
-    border: none;
     padding: 1.5rem 0;
   }
   .body .accessSection .accessBox .addressBox .address {
+    width: 100%;
     border-bottom: 1px solid black;
     font-size: 0.8rem;
     padding: 0 0 0.5rem;
@@ -327,7 +343,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 1.5rem;
+    padding: 1.5rem 2.5rem;
   }
   .body .sentenceSection .sentence:nth-child(1) {
     margin-bottom: 2.5rem;
@@ -344,7 +360,7 @@
   }
   .body .accessSection {
     background-color: white;
-    padding: 1.5rem;
+    padding: 1.5rem 2.5rem;
   }
   .body .accessSection .titleBox {
     border: none;
