--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -447,7 +447,8 @@
       justify-content: center;
       align-items: center;
       // 👇👇👇👇👇
-      padding: 1.5rem 2.5rem;
+      padding: 2.5rem;
+      // padding: 1.5rem 2.5rem;
       // padding: 1.5rem;
       // padding: 1.5rem 0rem;
       // padding: 1.5rem 0.5rem;
@@ -472,7 +473,8 @@
     .accessSection {
       background-color: white;
       // 👇👇👇👇👇
-      padding: 1.5rem 2.5rem;
+      padding: 2.5rem;
+      // padding: 1.5rem 2.5rem;
       // padding: 1.5rem 2rem;
       // padding: 1.5rem;
 
