--- a/components/Header/header.module.css
+++ b/components/Header/header.module.css
@@ -163,4 +163,15 @@
     font-size: 25px;
   }
 }
+@media screen and (max-width: 360px) {
+  .body {
+    height: 100px;
+  }
+  .body .section {
+    height: 100px;
+  }
+  .body .section h1 {
+    font-size: 25px;
+  }
+}
 /*# sourceMappingURL=header.module.css.map */
