--- a/components/Header/header.module.scss
+++ b/components/Header/header.module.scss
@@ -207,3 +207,18 @@
     }
   }
 }
+
+// 👇👇👇👇👇👇👇👇👇👇👇👇👇👇👇👇👇👇
+
+@media screen and (max-width: 360px) {
+  .body {
+    height: 100px;
+
+    .section {
+      height: 100px;
+      h1 {
+        font-size: 25px;
+      }
+    }
+  }
+}
