--- a/components/contact/contact.module.css
+++ b/components/contact/contact.module.css
@@ -1,115 +1,185 @@
 .body {
-  opacity: 1;
-  background-color: white;
   width: 100%;
-  height: 100%;
-  padding: 3rem;
+  padding: 5rem;
+  background-image: url("/image/contact01.jpg");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
   display: flex;
   justify-content: center;
   align-items: center;
-  background-image: url("/image/contact01.jpg");
-  background-size: cover;
-  background-repeat: no-repeat;
 }
-
-.contactMain {
-  z-index: 10;
-  color: white;
-  border-radius: 10px;
-  padding: 1rem 2rem;
+.body .main {
+  width: 80%;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
 }
-.contactMain h1 {
-  font-size: 2rem;
+.body .main .titleBox {
+  width: 100%;
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
-.contactMain p {
-  font-weight: 0;
-}
-
-.contactTitle {
-  text-align: center;
-  margin-bottom: 2rem;
-}
-.contactTitle h1,
-.contactTitle p {
+.body .main .titleBox h4 {
   margin: 0;
 }
-
-.form {
-  padding: 1rem;
-  width: 550px;
+.body .main .titleBox h1 {
+  font-size: 2rem;
+  margin: 0 0 3rem;
 }
-
-.contactItem {
-  margin-bottom: 2rem;
+.body .main form {
+  padding: 0 2rem;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+.body .main form .contactItem:nth-child(4) {
+  margin: 2rem 0;
+}
+.body .main form .contactItem {
+  border-left: 5px solid white;
+  width: 80%;
   display: flex;
 }
-
-.label {
-  border-left: 3px solid white;
-  padding-left: 1rem;
-  margin-right: 2rem;
-  width: 150px;
+.body .main form .contactItem label {
+  color: white;
+  padding: 0.5rem;
+  width: 200px;
+  font-weight: bold;
   display: flex;
   align-items: center;
+}
+.body .main form .contactItem .input {
+  border-radius: 5px;
+  width: 100%;
+  padding: 0.5rem;
   font-weight: bold;
 }
-
-.input {
-  width: 300px;
-  border: 1px solid black;
+.body .main form .contactItem .textarea {
+  width: 100%;
+  height: 120px;
+  line-height: 1.8;
 }
-
-.input[type=text],
-.input[type=email] {
-  font-size: 15px;
-  padding: 10px;
+.body .main .buttonBox {
+  padding: 3rem;
+  width: 80%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.body .main .buttonBox .button[type=submit] {
+  color: white;
+  padding: 0.5rem 1.5rem;
+  font-weight: bold;
+  font-size: 1rem;
   border-radius: 5px;
-}
-
-.textarea {
-  font-size: 15px;
-  padding: 10px;
-  border-radius: 5px;
-  max-height: 150px;
-}
-
-.buttonArea {
-  text-align: center;
-}
-
-.button[type=submit] {
+  margin: 0 0.5rem;
+  cursor: pointer;
+  box-shadow: 1px 1px 5px black;
   background-color: red;
-  color: white;
-  padding: 10px 20px;
-  font-size: 18px;
-  font-weight: bold;
-  border: none;
-  border-radius: 5px;
-  margin: 0 5px;
-  box-shadow: 1px 1px 3px black;
-  cursor: pointer;
 }
-.button[type=submit]:hover {
+.body .main .buttonBox .button[type=submit]:hover {
+  opacity: 0.8;
+}
+.body .main .buttonBox .button[type=reset] {
+  color: white;
+  padding: 0.5rem 1.5rem;
+  font-weight: bold;
+  font-size: 1rem;
+  border-radius: 5px;
+  margin: 0 0.5rem;
+  cursor: pointer;
+  box-shadow: 1px 1px 5px black;
+  background-color: gray;
+}
+.body .main .buttonBox .button[type=reset]:hover {
   opacity: 0.8;
 }
 
-.button[type=reset] {
-  background-color: gray;
-  color: white;
-  padding: 10px 20px;
-  font-size: 18px;
-  font-weight: bold;
-  border: none;
-  border-radius: 5px;
-  margin: 0 5px;
-  box-shadow: 1px 1px 3px black;
-  cursor: pointer;
+@media screen and (max-width: 1024px) {
+  .body {
+    padding: 3rem;
+  }
+  .body .main {
+    width: 80%;
+  }
+  .body .main form .contactItem {
+    width: 100%;
+  }
+  .body .main .buttonBox {
+    width: 100%;
+  }
 }
-.button[type=reset]:hover {
-  opacity: 0.8;
+@media screen and (max-width: 768px) {
+  .body .main {
+    width: 100%;
+  }
+  .body .main .titleBox h4 {
+    font-size: 0.8rem;
+  }
+  .body .main .titleBox h1 {
+    font-size: 1.6rem;
+    margin: 0 0 2rem;
+  }
+  .body .main form .contactItem label,
+.body .main form .contactItem .input {
+    font-size: 13px;
+  }
+  .body .main form .contactItem label {
+    width: 150px;
+  }
+}
+@media screen and (max-width: 480px) {
+  .body .main .titleBox h4 {
+    font-size: 0.6rem;
+  }
+  .body .main .titleBox h1 {
+    font-size: 1.4rem;
+    margin: 0 0 2rem;
+  }
+  .body .main form {
+    padding: 0;
+  }
+  .body .main form .contactItem {
+    border-left: 3px solid white;
+  }
+  .body .main form .contactItem label,
+.body .main form .contactItem .input {
+    font-size: 12px;
+  }
+  .body .main form .contactItem label {
+    width: 150px;
+  }
+  .body .main .buttonBox .button[type=submit] {
+    padding: 0.5rem 1rem;
+    font-size: 0.8rem;
+  }
+  .body .main .buttonBox .button[type=reset] {
+    padding: 0.5rem 1rem;
+    font-size: 0.8rem;
+  }
+}
+@media screen and (max-width: 390px) {
+  .body {
+    padding: 2.5rem;
+  }
+  .body .main .titleBox h1 {
+    margin: 0 0 1.5rem;
+  }
+  .body .main form .contactItem label,
+.body .main form .contactItem .input {
+    font-size: 12px;
+  }
+}
+@media screen and (max-width: 360px) {
+  .body {
+    padding: 1rem;
+  }
 }
 /*# sourceMappingURL=contact.module.css.map */
