--- a/components/contact/contact.module.scss
+++ b/components/contact/contact.module.scss
@@ -1,117 +1,239 @@
+@mixin button {
+  color: white;
+  padding: 0.5rem 1.5rem;
+  font-weight: bold;
+  font-size: 1rem;
+  border-radius: 5px;
+  margin: 0 0.5rem;
+  cursor: pointer;
+  box-shadow: 1px 1px 5px black;
+
+  &:hover {
+    opacity: 0.8;
+  }
+}
+
 .body {
-  opacity: 1;
-  background-color: white;
   width: 100%;
-  height: 100%;
-  padding: 3rem;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  padding: 5rem;
   background-image: url("/image/contact01.jpg");
   background-size: cover;
+  background-position: center;
   background-repeat: no-repeat;
-}
-
-.contactMain {
-  z-index: 10;
-  color: white;
-  border-radius: 10px;
-  padding: 1rem 2rem;
   display: flex;
   justify-content: center;
   align-items: center;
-  flex-direction: column;
 
-  h1 {
-    font-size: 2rem;
+  .main {
+    width: 80%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+
+    .titleBox {
+      width: 100%;
+      color: white;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+
+      h4 {
+        margin: 0;
+      }
+      h1 {
+        font-size: 2rem;
+        margin: 0 0 3rem;
+      }
+    }
+
+    form {
+      padding: 0 2rem;
+      width: 100%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+
+      .contactItem:nth-child(4) {
+        margin: 2rem 0;
+      }
+
+      .contactItem {
+        border-left: 5px solid white;
+        width: 80%;
+        display: flex;
+
+        label {
+          color: white;
+          padding: 0.5rem;
+          width: 200px;
+          font-weight: bold;
+          display: flex;
+          align-items: center;
+        }
+
+        .input {
+          border-radius: 5px;
+          width: 100%;
+          padding: 0.5rem;
+          font-weight: bold;
+        }
+
+        .textarea {
+          width: 100%;
+          height: 120px;
+          line-height: 1.8;
+        }
+      }
+    }
+
+    .buttonBox {
+      padding: 3rem;
+      width: 80%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+
+      .button[type="submit"] {
+        @include button;
+        background-color: red;
+      }
+
+      .button[type="reset"] {
+        @include button;
+        background-color: gray;
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 1024px) {
+  .body {
+    padding: 3rem;
+    .main {
+      width: 80%;
+
+      form {
+        .contactItem {
+          width: 100%;
+        }
+      }
+
+      .buttonBox {
+        width: 100%;
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .body {
+    .main {
+      width: 100%;
+
+      .titleBox {
+        h4 {
+          font-size: 0.8rem;
+        }
+
+        h1 {
+          font-size: 1.6rem;
+          margin: 0 0 2rem;
+        }
+      }
+
+      form {
+        .contactItem {
+          label,
+          .input {
+            font-size: 13px;
+          }
+
+          label {
+            width: 150px;
+          }
+        }
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 480px) {
+  @mixin button {
+    padding: 0.5rem 1rem;
+    font-size: 0.8rem;
   }
 
-  p {
-    font-weight: 0;
+  .body {
+    .main {
+      .titleBox {
+        h4 {
+          font-size: 0.6rem;
+        }
+
+        h1 {
+          font-size: 1.4rem;
+          margin: 0 0 2rem;
+        }
+      }
+
+      form {
+        padding: 0;
+
+        .contactItem {
+          border-left: 3px solid white;
+
+          label,
+          .input {
+            font-size: 12px;
+          }
+
+          label {
+            width: 150px;
+          }
+        }
+      }
+
+      .buttonBox {
+        .button[type="submit"] {
+          @include button;
+        }
+
+        .button[type="reset"] {
+          @include button;
+        }
+      }
+    }
   }
 }
 
-.contactTitle {
-  text-align: center;
-  margin-bottom: 2rem;
-  h1,
-  p {
-    margin: 0;
+@media screen and (max-width: 390px) {
+  .body {
+    padding: 2.5rem;
+
+    .main {
+      .titleBox {
+        h1 {
+          margin: 0 0 1.5rem;
+        }
+      }
+
+      form {
+        .contactItem {
+          label,
+          .input {
+            font-size: 12px;
+          }
+        }
+      }
+    }
   }
 }
 
-.form {
-  padding: 1rem;
-  width: 550px;
-}
-
-.contactItem {
-  margin-bottom: 2rem;
-  display: flex;
-}
-
-.label {
-  border-left: 3px solid white;
-  padding-left: 1rem;
-  margin-right: 2rem;
-  width: 150px;
-  display: flex;
-  align-items: center;
-  font-weight: bold;
-}
-
-.input {
-  width: 300px;
-  border: 1px solid black;
-}
-
-.input[type="text"],
-.input[type="email"] {
-  font-size: 15px;
-  padding: 10px;
-  border-radius: 5px;
-}
-
-.textarea {
-  font-size: 15px;
-  padding: 10px;
-  border-radius: 5px;
-  max-height: 150px;
-}
-
-.buttonArea {
-  text-align: center;
-}
-
-.button[type="submit"] {
-  background-color: red;
-  color: white;
-  padding: 10px 20px;
-  font-size: 18px;
-  font-weight: bold;
-  border: none;
-  border-radius: 5px;
-  margin: 0 5px;
-  box-shadow: 1px 1px 3px black;
-  cursor: pointer;
-
-  &:hover {
-    opacity: 0.8;
-  }
-}
-.button[type="reset"] {
-  background-color: gray;
-  color: white;
-  padding: 10px 20px;
-  font-size: 18px;
-  font-weight: bold;
-  border: none;
-  border-radius: 5px;
-  margin: 0 5px;
-  box-shadow: 1px 1px 3px black;
-  cursor: pointer;
-
-  &:hover {
-    opacity: 0.8;
+@media screen and (max-width: 360px) {
+  .body {
+    padding: 1rem;
   }
 }
