--- a/components/contact/contact.module.css
+++ b/components/contact/contact.module.css
@@ -159,10 +159,12 @@
   .body .main .buttonBox .button[type=submit] {
     padding: 0.5rem 1rem;
     font-size: 0.8rem;
+    border-radius: 3px;
   }
   .body .main .buttonBox .button[type=reset] {
     padding: 0.5rem 1rem;
     font-size: 0.8rem;
+    border-radius: 3px;
   }
 }
 @media screen and (max-width: 390px) {
