contact.jsxの背景を擬似要素で表現

--- a/components/contact/contact.module.css
+++ b/components/contact/contact.module.css
@@ -8,8 +8,21 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  position: relative;
+}
+.body::after {
+  content: "";
+  background-color: rgba(0, 0, 0, 0.5);
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  height: 100%;
 }
 .body .main {
+  position: relative;
+  z-index: 1;
   width: 80%;
   display: flex;
   justify-content: center;
@@ -159,12 +172,10 @@
   .body .main .buttonBox input[type=submit] {
     padding: 0.5rem 1rem;
     font-size: 0.8rem;
-    border-radius: 3px;
   }
   .body .main .buttonBox input[type=reset] {
     padding: 0.5rem 1rem;
     font-size: 0.8rem;
-    border-radius: 3px;
   }
 }
 @media screen and (max-width: 390px) {
