page/index.jsx/linkSectionをコンポーネント化

--- a/components/Header/header.module.css
+++ b/components/Header/header.module.css
@@ -29,7 +29,7 @@
   list-style: none;
 }
 .body .section li .orangeButton {
-  background-color: orangered;
+  background-color: orang;
 }
 .body .normal {
   display: none;
