component/Header/header.jsxとheaderAnother.jsxの2ファイルを作成

--- a/components/Header/hederAnother.module.css
+++ b/components/Header/hederAnother.module.css
@@ -187,4 +187,4 @@
     font-size: 25px;
   }
 }
-/*# sourceMappingURL=header.module.css.map */
+/*# sourceMappingURL=hederAnother.module.css.map */
