--- a/components/Header/hederAnother.module.scss
+++ b/components/Header/hederAnother.module.scss
@@ -1,4 +1,5 @@
 .body {
+  // border: 3px solid red;
   background-color: black;
   width: 100%;
   height: 130px;
@@ -10,6 +11,7 @@
   transition-duration: 300ms;
 
   .section {
+    // border: 3px solid blue;
     height: 130px;
     background-color: black;
     max-width: 1240px;
@@ -27,9 +29,11 @@
     }
 
     .nav {
+      // border: 3px solid orange;
       display: none;
 
       li {
+        // border: 3px solid green;
         list-style: none;
 
         .orangeButton {
@@ -132,14 +136,17 @@
   .body {
     .section {
       .nav {
+        // border: 3px solid red;
         display: flex;
         padding: 0;
 
         li {
+          // border: 3px solid blue;
           padding: 1rem 0.5rem;
           font-size: 20px;
 
           a {
+            // border: 3px solid green;
             font-weight: bold;
             padding: 1rem;
             display: flex;
